# gray_match

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  TODO.md  apiExport.h  grayMatch.cpp  grayMatch.h  integral.cpp  integral.h  main.cpp  privateType.h  serialize.cpp  sum.cpp  sum.h
